--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This repo will contain scripts to automate different web pages using Selenium with Python develop on Visual Studio Code.
+This repo will contain scripts to automate different web pages using Selenium with Python develop on Visual Studio Code. 
+
+TODO
